--- a/app/src/main/res/layout/activity_generate_dogs_screen.xml
+++ b/app/src/main/res/layout/activity_generate_dogs_screen.xml
@@ -10,19 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:contentDescription="@string/dog_image"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnGenerate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/button_color"
         android:padding="16dp"
         android:text="@string/generate"
         android:textSize="16sp"
-        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivDogImage" />
