--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,12 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.SimpleViralGamesTask" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/button_color</item>
+    </style>
+
+    <style name="Base.Theme.SimpleViralGamesTask.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/button_color</item>
     </style>
 
     <style name="Theme.SimpleViralGamesTask" parent="Base.Theme.SimpleViralGamesTask" />
