--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,14 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <TextView
+        android:text="@string/random_dog_generator"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:layout_marginBottom="100dp"
+        android:textSize="16sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/btnGenerateDogs"
         android:layout_width="wrap_content"
