--- a/app/src/main/res/layout/activity_my_recently_generated_dogs_screen.xml
+++ b/app/src/main/res/layout/activity_my_recently_generated_dogs_screen.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvGeneratedDogs"
+        android:id="@+id/generated_dogs_list"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
